🔧 Fix layout overflow

--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -6,6 +6,10 @@
 
 @import 'fontawesome.override';
 
+html {
+    overflow-x: hidden;
+}
+
 body {
     overflow-x: hidden;
 
